--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ $('#toast_close')?.addEventListener('click',()=>{ const t=$('#toast'); if(t) t.s
 /********************
  * CONFIG + STATE   *
  ********************/
-const GAS_ENDPOINT = 'PASTE_YOUR_APPS_SCRIPT_WEB_APP_URL_HERE';
+const GAS_ENDPOINT = 'https://script.google.com/macros/s/AKfycbxqZqobN7NZCxe1GMFioykj7wUEWMs30dF8NxTIRBUwKAlll1BuQNZshYqRJGpDlS2p/exec';
 const DRAFT_KEY = 'career_v7';
 
 // Teacher roster (students see names only)
